Update code for analysis

--- a/tables/03-metaregression_nathist_nointeractions.tex
+++ b/tables/03-metaregression_nathist_nointeractions.tex
@@ -1,6 +1,6 @@
 
 % Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Thu, Aug 19, 2021 - 13:07:44
+% Date and time: Wed, Aug 25, 2021 - 12:54:47
 \begin{table}[!htbp] \centering 
   \caption{} 
   \label{} 
@@ -12,33 +12,33 @@
 \\[-1.8ex] & log(max\_Inftot\_time) & log(max\_Inftot) & log(CumInfTot) \\ 
 \\[-1.8ex] & (1) & (2) & (3)\\ 
 \hline \\[-1.8ex] 
- n\_exp\_states & 0.170$^{***}$ & $-$0.203$^{***}$ & $-$0.179$^{***}$ \\ 
-  & (0.003) & (0.019) & (0.016) \\ 
+ n\_exp\_states & 0.138$^{***}$ & 0.044$^{***}$ & $-$0.010$^{***}$ \\ 
+  & (0.002) & (0.001) & (0.002) \\ 
   & & & \\ 
- n\_inf\_states & $-$0.058$^{***}$ & 0.177$^{***}$ & 0.070$^{***}$ \\ 
-  & (0.003) & (0.019) & (0.016) \\ 
+ n\_inf\_states & $-$0.034$^{***}$ & 0.113$^{***}$ & 0.007$^{***}$ \\ 
+  & (0.002) & (0.001) & (0.002) \\ 
   & & & \\ 
- n\_hhsize & $-$0.128$^{***}$ & 0.199$^{***}$ & 0.141$^{***}$ \\ 
-  & (0.002) & (0.009) & (0.008) \\ 
+ n\_hhsize & $-$0.066$^{***}$ & 0.015$^{***}$ & 0.006$^{***}$ \\ 
+  & (0.001) & (0.0005) & (0.001) \\ 
   & & & \\ 
- r\_tau & $-$0.243$^{***}$ & 0.427 & 0.294 \\ 
-  & (0.053) & (0.303) & (0.265) \\ 
+ r\_tau & $-$0.234$^{***}$ & 0.039$^{**}$ & 0.016 \\ 
+  & (0.039) & (0.018) & (0.025) \\ 
   & & & \\ 
- r\_beta & $-$1.627$^{***}$ & 4.400$^{***}$ & 3.544$^{***}$ \\ 
-  & (0.053) & (0.303) & (0.265) \\ 
+ r\_beta & $-$1.214$^{***}$ & 0.415$^{***}$ & 0.254$^{***}$ \\ 
+  & (0.039) & (0.018) & (0.025) \\ 
   & & & \\ 
- r\_omega & 0.406 & 0.911 & 24.734$^{***}$ \\ 
-  & (0.325) & (1.856) & (1.622) \\ 
+ r\_omega & 0.069 & 0.235$^{**}$ & 35.613$^{***}$ \\ 
+  & (0.237) & (0.112) & (0.153) \\ 
   & & & \\ 
- Constant & 3.933$^{***}$ & 9.747$^{***}$ & 13.079$^{***}$ \\ 
-  & (0.031) & (0.176) & (0.154) \\ 
+ Constant & 3.487$^{***}$ & 12.630$^{***}$ & 15.343$^{***}$ \\ 
+  & (0.023) & (0.011) & (0.015) \\ 
   & & & \\ 
 \hline \\[-1.8ex] 
-Observations & 11,664 & 11,664 & 11,664 \\ 
-R$^{2}$ & 0.466 & 0.070 & 0.068 \\ 
-Adjusted R$^{2}$ & 0.465 & 0.070 & 0.068 \\ 
-Residual Std. Error (df = 11657) & 0.287 & 1.637 & 1.430 \\ 
-F Statistic (df = 6; 11657) & 1,693.131$^{***}$ & 146.989$^{***}$ & 142.400$^{***}$ \\ 
+Observations & 739 & 739 & 739 \\ 
+R$^{2}$ & 0.928 & 0.945 & 0.987 \\ 
+Adjusted R$^{2}$ & 0.927 & 0.945 & 0.987 \\ 
+Residual Std. Error (df = 732) & 0.053 & 0.025 & 0.034 \\ 
+F Statistic (df = 6; 732) & 1,569.674$^{***}$ & 2,112.471$^{***}$ & 9,030.127$^{***}$ \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{3}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
