Added new figures and tables

--- a/output/Table2_metaregression_epidemic_curves.tex
+++ b/output/Table2_metaregression_epidemic_curves.tex
@@ -1,6 +1,6 @@
 
 % Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Wed, Nov 03, 2021 - 12:48:39
+% Date and time: Wed, Apr 27, 2022 - 13:48:42
 % Requires LaTeX packages: dcolumn 
 \begin{table}[!htbp] \centering 
   \caption{Metaregression estimates} 
@@ -9,25 +9,23 @@
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
  & \multicolumn{2}{c}{Peak time} & \multicolumn{2}{c}{Peak size} & \multicolumn{2}{c}{Epidemic size} \\ 
- E & 0.138^{***} & 0.113^{***} & 0.044^{***} & 0.028^{***} & -0.010^{***} & -0.012^{**} \\ 
+ E & -0.291 & -0.291 & 0.730^{***} & 0.730^{***} & -0.139 & -0.139 \\ 
   & & & & & & \\ 
- I & -0.034^{***} & -0.045^{***} & 0.113^{***} & 0.108^{***} & 0.007^{***} & 0.008 \\ 
+ I & -0.587 & -0.587 & 0.229^{**} & 0.229^{**} & -0.161 & -0.161 \\ 
   & & & & & & \\ 
- Household size (HH) & -0.066^{***} & -0.084^{***} & 0.015^{***} & 0.007^{***} & 0.006^{***} & 0.007^{***} \\ 
+ Household size (HH) & 0.025 & 0.025 & 0.172^{***} & 0.172^{***} & 0.765 & 0.765 \\ 
   & & & & & & \\ 
- $\tau$ & -0.234^{***} & -0.232^{***} & 0.039^{**} & 0.040^{**} & 0.016 & 0.016 \\ 
+ $\tau$ & -0.176 & -0.176 & 0.397 & 0.397 & 4.155 & 4.155 \\ 
   & & & & & & \\ 
- $\beta$ & -1.214^{***} & -1.213^{***} & 0.415^{***} & 0.416^{***} & 0.254^{***} & 0.254^{***} \\ 
+ $\beta$ & 1.333 & 1.333 & -12.584^{***} & -12.584^{***} & -24.032^{***} & -24.032^{***} \\ 
   & & & & & & \\ 
- $\omega$ & 0.069 & 0.045 & 0.235^{**} & 0.222^{**} & 35.613^{***} & 35.612^{***} \\ 
+ $\omega$ & 0.182 & 0.182 & -0.095^{***} & -0.095^{***} & 0.053 & 0.053 \\ 
   & & & & & & \\ 
- E*I &  & 0.0004 &  & 0.001 &  & 0.0003 \\ 
+ E*I & -0.134 & -0.134 & -0.057^{***} & -0.057^{***} & 0.045 & 0.045 \\ 
   & & & & & & \\ 
- E*HH &  & 0.006^{***} &  & 0.003^{***} &  & 0.0004 \\ 
+ E*HH & 0.161^{*} & 0.161^{*} & -0.053^{***} & -0.053^{***} & 0.012 & 0.012 \\ 
   & & & & & & \\ 
- I*HH &  & 0.003^{**} &  & 0.001 &  & -0.0005 \\ 
-  & & & & & & \\ 
- Constant & 3.487^{***} & 3.556^{***} & 12.630^{***} & 12.665^{***} & 15.343^{***} & 15.344^{***} \\ 
+ I*HH & -0.665 & -0.665 & 5.100^{***} & 5.100^{***} & 208.453^{***} & 208.453^{***} \\ 
   & & & & & & \\ 
 \hline \\[-1.8ex] 
 \hline 
