--- a/output/Table3_metaregression_bias.tex
+++ b/output/Table3_metaregression_bias.tex
@@ -1,6 +1,6 @@
 
 % Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Thu, Nov 04, 2021 - 14:33:04
+% Date and time: Wed, Apr 27, 2022 - 13:49:31
 % Requires LaTeX packages: dcolumn 
 \begin{table}[!htbp] \centering 
   \caption{Metaregression estimates} 
@@ -9,23 +9,23 @@
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
  & \multicolumn{2}{c}{Peak time} & \multicolumn{2}{c}{Peak size} & \multicolumn{2}{c}{Epidemic size} \\ 
- E & -129.959^{***} & 113.497^{*} & -33.004^{***} & 12.518 & 0.714 & -3.108 \\ 
+ E & -0.291 & -0.291 & 0.730^{***} & 0.730^{***} & -0.139 & -0.139 \\ 
   & & & & & & \\ 
- I & 64.295^{***} & 21.880 & -15.701^{***} & -3.380 & 70.242^{***} & -2.727 \\ 
+ I & -0.587 & -0.587 & 0.229^{**} & 0.229^{**} & -0.161 & -0.161 \\ 
   & & & & & & \\ 
- Household size (HH) & 144.020^{***} & 216.364^{***} & 37.709^{***} & 73.542^{***} & 144.287^{***} & 98.431^{***} \\ 
+ Household size (HH) & 0.025 & 0.025 & 0.172^{***} & 0.172^{***} & 0.765 & 0.765 \\ 
   & & & & & & \\ 
- $\tau$ & 114.024 & 190.335 & 131.761^{**} & 131.761^{***} & 386.661^{***} & 386.661^{***} \\ 
+ $\tau$ & -0.176 & -0.176 & 0.397 & 0.397 & 4.155 & 4.155 \\ 
   & & & & & & \\ 
- $\beta$ & -561.856^{*} & -485.545^{*} & -110.974^{**} & -110.974^{***} & -706.062^{***} & -706.062^{***} \\ 
+ $\beta$ & 1.333 & 1.333 & -12.584^{***} & -12.584^{***} & -24.032^{***} & -24.032^{***} \\ 
   & & & & & & \\ 
- E*I &  & -22.744 &  & -0.263 &  & 1.015 \\ 
+ $\omega$ & 0.182 & 0.182 & -0.095^{***} & -0.095^{***} & 0.053 & 0.053 \\ 
   & & & & & & \\ 
- E*HH &  & -65.757^{***} &  & -14.188^{***} &  & -0.456 \\ 
+ E*I & -0.134 & -0.134 & -0.057^{***} & -0.057^{***} & 0.045 & 0.045 \\ 
   & & & & & & \\ 
- I*HH &  & 32.515^{***} &  & -3.120^{**} &  & 22.593^{***} \\ 
+ E*HH & 0.161^{*} & 0.161^{*} & -0.053^{***} & -0.053^{***} & 0.012 & 0.012 \\ 
   & & & & & & \\ 
- Constant & 106.884 & -279.497 & 17.766 & -102.139^{***} & -229.389^{***} & -73.019 \\ 
+ I*HH & -0.665 & -0.665 & 5.100^{***} & 5.100^{***} & 208.453^{***} & 208.453^{***} \\ 
   & & & & & & \\ 
 \hline \\[-1.8ex] 
 \hline 
