--- a/output/TableA2_metaregression_bias_vax_propL_effH.tex
+++ b/output/TableA2_metaregression_bias_vax_propL_effH.tex
@@ -1,32 +1,32 @@
 
 % Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Tue, Jun 21, 2022 - 09:52:05
+% Date and time: Tue, Jun 21, 2022 - 10:00:11
 % Requires LaTeX packages: dcolumn 
 \begin{table}[!htbp] \centering 
-  \caption{Metaregression estimates on relative bias of treatment effects, NPI = 60%} 
-  \label{tab:metaregbias} 
+  \caption{Metaregression estimates vaccination coverage = 30% & effectiveness = 90%} 
+  \label{tab:vax_metareg_30_90} 
 \begin{tabular}{@{\extracolsep{5pt}}lD{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} } 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
  & \multicolumn{2}{c}{Peak time} & \multicolumn{2}{c}{Peak size} & \multicolumn{2}{c}{Epidemic size} \\ 
- Household size 3 (HH3) & 52.192 & 57.915 & 48.871^{***} & 46.455^{***} & 105.389^{***} & 108.967^{***} \\ 
+ Household size 3 (HH3) & 23.566 & 35.758 & -5.720^{**} & -7.251^{***} & 202.260^{***} & 200.586^{***} \\ 
   & & & & & & \\ 
- Household size 5 (HH5) & 29.248^{**} & 16.118 & 15.172^{***} & 20.003^{***} & -55.829^{***} & -62.984^{***} \\ 
+ Household size 5 (HH5) & -25.318^{**} & -73.735^{*} & -1.293^{***} & 1.771 & 0.933^{**} & 4.281^{**} \\ 
   & & & & & & \\ 
- E & -2.526 & -2.500 & -0.836 & -0.410 & 0.700 & 0.224 \\ 
+ E & 10.203 & -0.746 & -1.116^{***} & -0.529 & -1.631^{***} & -1.120^{***} \\ 
   & & & & & & \\ 
- I & 3.557 & 0.208 & -0.578 & 0.204 & -4.677^{***} & -5.990^{***} \\ 
+ I & -8.137 & -3.675 & -0.050 & 0.129 & -0.017 & 0.308 \\ 
   & & & & & & \\ 
- $\tau$ & -26.968 & -25.739 & -97.742^{***} & -97.742^{***} & -228.472^{***} & -228.472^{***} \\ 
+ $\tau$ & -44.077 & -60.082 & 21.031^{***} & 21.031^{***} & 6.672 & 6.672 \\ 
   & & & & & & \\ 
- $\beta$ & 37.847 & 39.076 & 17.618 & 17.618 & -123.003^{***} & -123.003^{***} \\ 
+ $\beta$ & -116.388 & -100.959 & -2.444 & -2.444 & -0.865 & -0.865 \\ 
   & & & & & & \\ 
- E*HH5 &  & -0.236 &  & -0.852 &  & 0.952 \\ 
+ E*HH5 &  & 32.081^{**} &  & -1.174^{**} &  & -1.023^{*} \\ 
   & & & & & & \\ 
- I*HH5 &  & 6.863 &  & -1.563 &  & 2.626 \\ 
+ I*HH5 &  & -12.954 &  & -0.357 &  & -0.651 \\ 
   & & & & & & \\ 
 \hline \\[-1.8ex] 
-HH3 + HH5 & 81.44 & 80.659 & 64.043$^{***}$ & 64.043$^{***}$ & 49.56$^{***}$ & 49.56$^{***}$ \\ 
+HH3 + HH5 & -1.751 & -18.849 & -7.012$^{***}$ & -7.012$^{***}$ & 203.193$^{***}$ & 203.193$^{***}$ \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{6}{l}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
