--- a/output/TableA1_metaregression_bias_NPI20.tex
+++ b/output/TableA1_metaregression_bias_NPI20.tex
@@ -1,32 +1,32 @@
 
 % Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Tue, Jun 21, 2022 - 09:52:05
+% Date and time: Tue, Jun 21, 2022 - 09:58:11
 % Requires LaTeX packages: dcolumn 
 \begin{table}[!htbp] \centering 
-  \caption{Metaregression estimates on relative bias of treatment effects, NPI = 60%} 
-  \label{tab:metaregbias} 
+  \caption{Metaregression estimates on relative bias of treatment effects, NPI = 20%} 
+  \label{tab:metaregbias_app} 
 \begin{tabular}{@{\extracolsep{5pt}}lD{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} } 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
  & \multicolumn{2}{c}{Peak time} & \multicolumn{2}{c}{Peak size} & \multicolumn{2}{c}{Epidemic size} \\ 
- Household size 3 (HH3) & 52.192 & 57.915 & 48.871^{***} & 46.455^{***} & 105.389^{***} & 108.967^{***} \\ 
+ Household size 3 (HH3) & 29.384 & 30.810 & 16.852 & 17.019 & 21.483 & 65.039 \\ 
   & & & & & & \\ 
- Household size 5 (HH5) & 29.248^{**} & 16.118 & 15.172^{***} & 20.003^{***} & -55.829^{***} & -62.984^{***} \\ 
+ Household size 5 (HH5) & -10.250 & -11.182 & 5.022 & 4.689 & -44.573^{**} & -131.685^{**} \\ 
   & & & & & & \\ 
- E & -2.526 & -2.500 & -0.836 & -0.410 & 0.700 & 0.224 \\ 
+ E & 3.509 & 3.949 & 4.655^{*} & 2.769 & 46.035^{***} & 15.751 \\ 
   & & & & & & \\ 
- I & 3.557 & 0.208 & -0.578 & 0.204 & -4.677^{***} & -5.990^{***} \\ 
+ I & -4.543 & -5.224 & 0.041 & 1.844 & -16.417 & -7.912 \\ 
   & & & & & & \\ 
- $\tau$ & -26.968 & -25.739 & -97.742^{***} & -97.742^{***} & -228.472^{***} & -228.472^{***} \\ 
+ $\tau$ & -110.098 & -106.921 & -62.549 & -62.549 & -608.207^{***} & -608.207^{***} \\ 
   & & & & & & \\ 
- $\beta$ & 37.847 & 39.076 & 17.618 & 17.618 & -123.003^{***} & -123.003^{***} \\ 
+ $\beta$ & 27.071 & 22.601 & -8.515 & -8.515 & -9.013 & -9.013 \\ 
   & & & & & & \\ 
- E*HH5 &  & -0.236 &  & -0.852 &  & 0.952 \\ 
+ E*HH5 &  & -2.149 &  & 3.772 &  & 60.567^{***} \\ 
   & & & & & & \\ 
- I*HH5 &  & 6.863 &  & -1.563 &  & 2.626 \\ 
+ I*HH5 &  & 3.172 &  & -3.605 &  & -17.011 \\ 
   & & & & & & \\ 
 \hline \\[-1.8ex] 
-HH3 + HH5 & 81.44 & 80.659 & 64.043$^{***}$ & 64.043$^{***}$ & 49.56$^{***}$ & 49.56$^{***}$ \\ 
+HH3 + HH5 & 19.134 & 20.65 & 21.874 & 21.874 & -23.09 & -23.09 \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{6}{l}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
