--- a/output/TableA3_metaregression_bias_vax_propH_effH.tex
+++ b/output/TableA3_metaregression_bias_vax_propH_effH.tex
@@ -1,32 +1,32 @@
 
 % Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Tue, Jun 21, 2022 - 09:52:05
+% Date and time: Tue, Jun 21, 2022 - 10:04:22
 % Requires LaTeX packages: dcolumn 
 \begin{table}[!htbp] \centering 
-  \caption{Metaregression estimates on relative bias of treatment effects, NPI = 60%} 
-  \label{tab:metaregbias} 
+  \caption{Metaregression estimates vaccination coverage = 90% & effectiveness = 90%} 
+  \label{tab:vax_metareg_90_90} 
 \begin{tabular}{@{\extracolsep{5pt}}lD{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} } 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
  & \multicolumn{2}{c}{Peak time} & \multicolumn{2}{c}{Peak size} & \multicolumn{2}{c}{Epidemic size} \\ 
- Household size 3 (HH3) & 52.192 & 57.915 & 48.871^{***} & 46.455^{***} & 105.389^{***} & 108.967^{***} \\ 
+ Household size 3 (HH3) & -8.814 & 58.751 & 4.446^{***} & 3.445^{***} & 172.646^{***} & 170.403^{***} \\ 
   & & & & & & \\ 
- Household size 5 (HH5) & 29.248^{**} & 16.118 & 15.172^{***} & 20.003^{***} & -55.829^{***} & -62.984^{***} \\ 
+ Household size 5 (HH5) & -15.058 & -157.172^{***} & -0.860^{***} & 1.142^{*} & 1.361^{**} & 5.847^{***} \\ 
   & & & & & & \\ 
- E & -2.526 & -2.500 & -0.836 & -0.410 & 0.700 & 0.224 \\ 
+ E & -13.084^{*} & -39.866^{***} & -0.424^{***} & -0.012 & -4.213^{***} & -3.412^{***} \\ 
   & & & & & & \\ 
- I & 3.557 & 0.208 & -0.578 & 0.204 & -4.677^{***} & -5.990^{***} \\ 
+ I & 4.211 & -8.000 & -0.109 & -0.020 & 1.290^{***} & 1.610^{***} \\ 
   & & & & & & \\ 
- $\tau$ & -26.968 & -25.739 & -97.742^{***} & -97.742^{***} & -228.472^{***} & -228.472^{***} \\ 
+ $\tau$ & -8.082 & 14.546 & -6.255^{***} & -6.255^{***} & 80.039^{***} & 80.039^{***} \\ 
   & & & & & & \\ 
- $\beta$ & 37.847 & 39.076 & 17.618 & 17.618 & -123.003^{***} & -123.003^{***} \\ 
+ $\beta$ & 48.670 & 68.799 & -1.578 & -1.578 & 0.368 & 0.368 \\ 
   & & & & & & \\ 
- E*HH5 &  & -0.236 &  & -0.852 &  & 0.952 \\ 
+ E*HH5 &  & 45.429^{***} &  & -0.825^{***} &  & -1.602^{**} \\ 
   & & & & & & \\ 
- I*HH5 &  & 6.863 &  & -1.563 &  & 2.626 \\ 
+ I*HH5 &  & 23.275^{*} &  & -0.176 &  & -0.641 \\ 
   & & & & & & \\ 
 \hline \\[-1.8ex] 
-HH3 + HH5 & 81.44 & 80.659 & 64.043$^{***}$ & 64.043$^{***}$ & 49.56$^{***}$ & 49.56$^{***}$ \\ 
+HH3 + HH5 & -23.872 & -29.718 & 3.585$^{***}$ & 3.585$^{***}$ & 174.007$^{***}$ & 174.007$^{***}$ \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{6}{l}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
