--- a/output/TableA4_metaregression_bias_vax_propH_effL.tex
+++ b/output/TableA4_metaregression_bias_vax_propH_effL.tex
@@ -1,32 +1,32 @@
 
 % Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Tue, Jun 21, 2022 - 09:52:05
+% Date and time: Tue, Jun 21, 2022 - 10:07:46
 % Requires LaTeX packages: dcolumn 
 \begin{table}[!htbp] \centering 
-  \caption{Metaregression estimates on relative bias of treatment effects, NPI = 60%} 
-  \label{tab:metaregbias} 
+  \caption{Metaregression estimates vaccination coverage = 90% & effectiveness = 50%} 
+  \label{tab:vax_metareg_90_50} 
 \begin{tabular}{@{\extracolsep{5pt}}lD{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} } 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
  & \multicolumn{2}{c}{Peak time} & \multicolumn{2}{c}{Peak size} & \multicolumn{2}{c}{Epidemic size} \\ 
- Household size 3 (HH3) & 52.192 & 57.915 & 48.871^{***} & 46.455^{***} & 105.389^{***} & 108.967^{***} \\ 
+ Household size 3 (HH3) & -85.857^{***} & -89.789^{***} & -2.978^{**} & -4.419^{***} & 190.195^{***} & 188.962^{***} \\ 
   & & & & & & \\ 
- Household size 5 (HH5) & 29.248^{**} & 16.118 & 15.172^{***} & 20.003^{***} & -55.829^{***} & -62.984^{***} \\ 
+ Household size 5 (HH5) & -9.699^{**} & 0.861 & -1.206^{***} & 1.677^{**} & 0.673 & 3.137^{*} \\ 
   & & & & & & \\ 
- E & -2.526 & -2.500 & -0.836 & -0.410 & 0.700 & 0.224 \\ 
+ E & 2.119 & 3.999 & -0.652^{***} & -0.056 & -1.379^{***} & -1.080^{***} \\ 
   & & & & & & \\ 
- I & 3.557 & 0.208 & -0.578 & 0.204 & -4.677^{***} & -5.990^{***} \\ 
+ I & -0.187 & 0.078 & -0.016 & 0.108 & 0.342 & 0.660^{*} \\ 
   & & & & & & \\ 
- $\tau$ & -26.968 & -25.739 & -97.742^{***} & -97.742^{***} & -228.472^{***} & -228.472^{***} \\ 
+ $\tau$ & 77.292^{*} & 78.477^{*} & 12.257^{***} & 12.257^{***} & 33.103^{***} & 33.103^{***} \\ 
   & & & & & & \\ 
- $\beta$ & 37.847 & 39.076 & 17.618 & 17.618 & -123.003^{***} & -123.003^{***} \\ 
+ $\beta$ & 43.546 & 41.757 & -3.055 & -3.055 & -1.334 & -1.334 \\ 
   & & & & & & \\ 
- E*HH5 &  & -0.236 &  & -0.852 &  & 0.952 \\ 
+ E*HH5 &  & -4.366 &  & -1.192^{***} &  & -0.598 \\ 
   & & & & & & \\ 
- I*HH5 &  & 6.863 &  & -1.563 &  & 2.626 \\ 
+ I*HH5 &  & -0.621 &  & -0.249 &  & -0.634 \\ 
   & & & & & & \\ 
 \hline \\[-1.8ex] 
-HH3 + HH5 & 81.44 & 80.659 & 64.043$^{***}$ & 64.043$^{***}$ & 49.56$^{***}$ & 49.56$^{***}$ \\ 
+HH3 + HH5 & -95.556$^{***}$ & -93.915$^{***}$ & -4.184$^{***}$ & -4.184$^{***}$ & 190.868$^{***}$ & 190.868$^{***}$ \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{6}{l}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
