--- a/output/TableA7_metaregression_bias_W02.tex
+++ b/output/TableA7_metaregression_bias_W02.tex
@@ -1,32 +1,32 @@
 
 % Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Tue, Jun 21, 2022 - 09:52:05
+% Date and time: Fri, Jul 22, 2022 - 16:43:38
 % Requires LaTeX packages: dcolumn 
 \begin{table}[!htbp] \centering 
-  \caption{Metaregression estimates on relative bias of treatment effects, NPI = 60%} 
-  \label{tab:metaregbias} 
+  \caption{Metaregression estimates on relative bias of treatment effects, NPI = 60% and $\omega$ = 0.02} 
+  \label{tab:vax_metareg_NPI60_W02} 
 \begin{tabular}{@{\extracolsep{5pt}}lD{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} } 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
  & \multicolumn{2}{c}{Peak time} & \multicolumn{2}{c}{Peak size} & \multicolumn{2}{c}{Epidemic size} \\ 
- Household size 3 (HH3) & 52.192 & 57.915 & 48.871^{***} & 46.455^{***} & 105.389^{***} & 108.967^{***} \\ 
+ Household size 3 (HH3) & 8.184 & 14.312 & 49.427^{***} & 47.213^{***} & 367.822^{***} & 365.382^{***} \\ 
   & & & & & & \\ 
- Household size 5 (HH5) & 29.248^{**} & 16.118 & 15.172^{***} & 20.003^{***} & -55.829^{***} & -62.984^{***} \\ 
+ Household size 5 (HH5) & 32.967^{***} & 20.124 & 15.240^{***} & 19.667^{***} & -22.634^{***} & -17.755^{***} \\ 
   & & & & & & \\ 
- E & -2.526 & -2.500 & -0.836 & -0.410 & 0.700 & 0.224 \\ 
+ E & -3.927 & -4.653 & -0.662 & -0.317 & 10.486^{***} & 8.948^{***} \\ 
   & & & & & & \\ 
- I & 3.557 & 0.208 & -0.578 & 0.204 & -4.677^{***} & -5.990^{***} \\ 
+ I & 4.773 & 2.292 & -0.355 & 0.406 & -8.411^{***} & -5.653^{***} \\ 
   & & & & & & \\ 
- $\tau$ & -26.968 & -25.739 & -97.742^{***} & -97.742^{***} & -228.472^{***} & -228.472^{***} \\ 
+ $\tau$ & 19.484 & 19.867 & -101.369^{***} & -101.369^{***} & -381.485^{***} & -381.485^{***} \\ 
   & & & & & & \\ 
- $\beta$ & 37.847 & 39.076 & 17.618 & 17.618 & -123.003^{***} & -123.003^{***} \\ 
+ $\beta$ & 98.188 & 98.571 & 16.045 & 16.045 & -88.700^{***} & -88.700^{***} \\ 
   & & & & & & \\ 
- E*HH5 &  & -0.236 &  & -0.852 &  & 0.952 \\ 
+ E*HH5 &  & 1.395 &  & -0.692 &  & 3.076^{*} \\ 
   & & & & & & \\ 
- I*HH5 &  & 6.863 &  & -1.563 &  & 2.626 \\ 
+ I*HH5 &  & 5.046 &  & -1.522 &  & -5.515^{***} \\ 
   & & & & & & \\ 
 \hline \\[-1.8ex] 
-HH3 + HH5 & 81.44 & 80.659 & 64.043$^{***}$ & 64.043$^{***}$ & 49.56$^{***}$ & 49.56$^{***}$ \\ 
+HH3 + HH5 & 41.151 & 40.877 & 64.666$^{***}$ & 64.666$^{***}$ & 345.188$^{***}$ & 345.188$^{***}$ \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{6}{l}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
